--- a/calendar.html
+++ b/calendar.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta charset="utf-8" />
-		<title>Full Calendar - Ace Admin</title>
+		<title> Calendar - Revenue Sure</title>
 
 		<meta name="description" content="with draggable and editable events" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -61,8 +61,7 @@
 				<div class="navbar-header pull-left">
 					<a href="index.html" class="navbar-brand">
 						<small>
-							<i class="fa fa-leaf"></i>
-							Ace Admin
+							Revenue Sure
 						</small>
 					</a>
 				</div>
@@ -298,7 +297,7 @@
 
 										<li>
 											<a href="#" class="clearfix">
-												<img src="assets/images/avatars/avatar5.png" class="msg-photo" alt="Fred's Avatar" />
+												<img src="assets/images/avatars/kenya.png" class="msg-photo" alt="Fred's Avatar" />
 												<span class="msg-body">
 													<span class="msg-title">
 														<span class="blue">Fred:</span>
@@ -326,10 +325,10 @@
 
 						<li class="light-blue dropdown-modal">
 							<a data-toggle="dropdown" href="#" class="dropdown-toggle">
-								<img class="nav-user-photo" src="assets/images/avatars/user.jpg" alt="Jason's Photo" />
+								<img class="nav-user-photo" src="assets/images/avatars/kenya.png" alt="Jason's Photo" />
 								<span class="user-info">
 									<small>Welcome,</small>
-									Jason
+									Admin
 								</span>
 
 								<i class="ace-icon fa fa-caret-down"></i>
@@ -376,23 +375,6 @@
 				</script>
 
 				<div class="sidebar-shortcuts" id="sidebar-shortcuts">
-					<div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-						<button class="btn btn-success">
-							<i class="ace-icon fa fa-signal"></i>
-						</button>
-
-						<button class="btn btn-info">
-							<i class="ace-icon fa fa-pencil"></i>
-						</button>
-
-						<button class="btn btn-warning">
-							<i class="ace-icon fa fa-users"></i>
-						</button>
-
-						<button class="btn btn-danger">
-							<i class="ace-icon fa fa-cogs"></i>
-						</button>
-					</div>
 
 					<div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
 						<span class="btn btn-success"></span>
@@ -703,9 +685,9 @@
 					</li>
 
 					<li class="">
-						<a href="widgets.html">
+						<a href="projects.html">
 							<i class="menu-icon fa fa-list-alt"></i>
-							<span class="menu-text"> Widgets </span>
+							<span class="menu-text"> Projects </span>
 						</a>
 
 						<b class="arrow"></b>
@@ -722,15 +704,6 @@
 									<i class="ace-icon fa fa-exclamation-triangle red bigger-130"></i>
 								</span>
 							</span>
-						</a>
-
-						<b class="arrow"></b>
-					</li>
-
-					<li class="">
-						<a href="gallery.html">
-							<i class="menu-icon fa fa-picture-o"></i>
-							<span class="menu-text"> Gallery </span>
 						</a>
 
 						<b class="arrow"></b>
@@ -775,42 +748,6 @@
 							</li>
 
 							<li class="">
-								<a href="invoice.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Invoice
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="timeline.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Timeline
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="search.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Search Results
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="email.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Email Templates
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
 								<a href="login.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Login &amp; Register
@@ -845,42 +782,6 @@
 
 								<b class="arrow"></b>
 							</li>
-
-							<li class="">
-								<a href="error-404.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Error 404
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="error-500.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Error 500
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="grid.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Grid
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="blank.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Blank Page
-								</a>
-
-								<b class="arrow"></b>
-							</li>
 						</ul>
 					</li>
 				</ul><!-- /.nav-list -->
@@ -900,15 +801,6 @@
 							</li>
 							<li class="active">Calendar</li>
 						</ul><!-- /.breadcrumb -->
-
-						<div class="nav-search" id="nav-search">
-							<form class="form-search">
-								<span class="input-icon">
-									<input type="text" placeholder="Search ..." class="nav-search-input" id="nav-search-input" autocomplete="off" />
-									<i class="ace-icon fa fa-search nav-search-icon"></i>
-								</span>
-							</form>
-						</div><!-- /.nav-search -->
 					</div>
 
 					<div class="page-content">
@@ -962,6 +854,7 @@
 
 								<div class="pull-left width-50">
 									<div class="ace-settings-item">
+
 										<input type="checkbox" class="ace ace-checkbox-2" id="ace-settings-hover" autocomplete="off" />
 										<label class="lbl" for="ace-settings-hover"> Submenu on Hover</label>
 									</div>
@@ -1142,7 +1035,7 @@
 			revert: true,      // will cause the event to go back to its
 			revertDuration: 0  //  original position after the drag
 		});
-		
+
 	});
 
 
@@ -1159,13 +1052,13 @@
 
 	var calendar = $('#calendar').fullCalendar({
 		//isRTL: true,
-		//firstDay: 1,// >> change first day of week 
-		
+		//firstDay: 1,// >> change first day of week
+
 		buttonHtml: {
 			prev: '<i class="ace-icon fa fa-chevron-left"></i>',
 			next: '<i class="ace-icon fa fa-chevron-right"></i>'
 		},
-	
+
 		header: {
 			left: 'prev,next today',
 			center: 'title',
@@ -1191,7 +1084,7 @@
 		  }
 		]
 		,
-		
+
 		/**eventResize: function(event, delta, revertFunc) {
 
 			alert(event.title + " end is now " + event.end.format());
@@ -1201,40 +1094,40 @@
 			}
 
 		},*/
-		
+
 		editable: true,
 		droppable: true, // this allows things to be dropped onto the calendar !!!
 		drop: function(date) { // this function is called when something is dropped
-		
+
 			// retrieve the dropped element's stored Event Object
 			var originalEventObject = $(this).data('eventObject');
 			var $extraEventClass = $(this).attr('data-class');
-			
-			
+
+
 			// we need to copy it, so that multiple events don't have a reference to the same object
 			var copiedEventObject = $.extend({}, originalEventObject);
-			
+
 			// assign it the date that was reported
 			copiedEventObject.start = date;
 			copiedEventObject.allDay = false;
 			if($extraEventClass) copiedEventObject['className'] = [$extraEventClass];
-			
+
 			// render the event on the calendar
 			// the last `true` argument determines if the event "sticks" (http://arshaw.com/fullcalendar/docs/event_rendering/renderEvent/)
 			$('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
-			
+
 			// is the "remove after drop" checkbox checked?
 			if ($('#drop-remove').is(':checked')) {
 				// if so, remove the element from the "Draggable Events" list
 				$(this).remove();
 			}
-			
+
 		}
 		,
 		selectable: true,
 		selectHelper: true,
 		select: function(start, end, allDay) {
-			
+
 			bootbox.prompt("New Event Title:", function(title) {
 				if (title !== null) {
 					calendar.fullCalendar('renderEvent',
@@ -1249,7 +1142,7 @@
 					);
 				}
 			});
-			
+
 
 			calendar.fullCalendar('unselect');
 		}
@@ -1257,7 +1150,7 @@
 		eventClick: function(calEvent, jsEvent, view) {
 
 			//display a modal
-			var modal = 
+			var modal =
 			'<div class="modal fade">\
 			  <div class="modal-dialog">\
 			   <div class="modal-content">\
@@ -1276,8 +1169,8 @@
 			  </div>\
 			 </div>\
 			</div>';
-		
-		
+
+
 			var modal = $(modal).appendTo('body');
 			modal.find('form').on('submit', function(ev){
 				ev.preventDefault();
@@ -1292,7 +1185,7 @@
 				})
 				modal.modal("hide");
 			});
-			
+
 			modal.modal('show').on('hidden', function(){
 				modal.remove();
 			});
@@ -1306,7 +1199,7 @@
 			//$(this).css('border-color', 'red');
 
 		}
-		
+
 	});
 
 
