--- a/index.html
+++ b/index.html
@@ -659,9 +659,9 @@
 					</li>
 
 					<li class="">
-						<a href="widgets.html">
+						<a href="projects.html">
 							<i class="menu-icon fa fa-list-alt"></i>
-							<span class="menu-text"> Widgets </span>
+							<span class="menu-text">Projects</span>
 						</a>
 
 						<b class="arrow"></b>
@@ -682,12 +682,6 @@
 
 						<b class="arrow"></b>
 					</li>
-
-					<li class="">
-						<a href="gallery.html">
-							<i class="menu-icon fa fa-picture-o"></i>
-							<span class="menu-text"> Gallery </span>
-						</a>
 
 						<b class="arrow"></b>
 					</li>
