--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-desktop"></i>
 							<span class="menu-text">
-								UI &amp; Elements
+								Revenue Summary
 							</span>
 
 							<b class="arrow fa fa-angle-down"></b>
@@ -384,86 +384,20 @@
 						<b class="arrow"></b>
 
 						<ul class="submenu">
-							<li class="">
-								<a href="#" class="dropdown-toggle">
-									<i class="menu-icon fa fa-caret-right"></i>
-
-									Layouts
-									<b class="arrow fa fa-angle-down"></b>
-								</a>
-
-								<b class="arrow"></b>
-
-								<ul class="submenu">
-									<li class="">
-										<a href="top-menu.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Top Menu
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="two-menu-1.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Two Menus 1
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="two-menu-2.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Two Menus 2
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="mobile-menu-1.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Default Mobile Menu
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="mobile-menu-2.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Mobile Menu 2
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="mobile-menu-3.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Mobile Menu 3
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-								</ul>
-							</li>
 
 							<li class="">
-								<a href="typography.html">
+								<a href="utilities.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Typography
+									Utilities
 								</a>
 
 								<b class="arrow"></b>
 							</li>
 
 							<li class="">
-								<a href="elements.html">
+								<a href="rents.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Elements
+									Rents
 								</a>
 
 								<b class="arrow"></b>
@@ -472,7 +406,7 @@
 							<li class="">
 								<a href="buttons.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Buttons &amp; Icons
+									Parking Fee
 								</a>
 
 								<b class="arrow"></b>
@@ -481,7 +415,7 @@
 							<li class="">
 								<a href="content-slider.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Content Sliders
+									Tourism
 								</a>
 
 								<b class="arrow"></b>
@@ -490,7 +424,7 @@
 							<li class="">
 								<a href="treeview.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Treeview
+									Business Permits
 								</a>
 
 								<b class="arrow"></b>
@@ -499,7 +433,7 @@
 							<li class="">
 								<a href="jquery-ui.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									jQuery UI
+									Land Rates
 								</a>
 
 								<b class="arrow"></b>
@@ -508,13 +442,13 @@
 							<li class="">
 								<a href="nestable-list.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Nestable Lists
+									Others
 								</a>
 
 								<b class="arrow"></b>
 							</li>
 
-							<li class="">
+							<!-- <li class="">
 								<a href="#" class="dropdown-toggle">
 									<i class="menu-icon fa fa-caret-right"></i>
 
@@ -565,11 +499,11 @@
 										</ul>
 									</li>
 								</ul>
-							</li>
+							</li> -->
 						</ul>
 					</li>
 
-					<li class="">
+					<!-- <li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-list"></i>
 							<span class="menu-text"> Tables </span>
@@ -598,9 +532,9 @@
 								<b class="arrow"></b>
 							</li>
 						</ul>
-					</li>
+					</li> -->
 
-					<li class="">
+					<!-- <li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-pencil-square-o"></i>
 							<span class="menu-text"> Forms </span>
@@ -656,7 +590,7 @@
 								<b class="arrow"></b>
 							</li>
 						</ul>
-					</li>
+					</li> -->
 
 					<li class="">
 						<a href="projects.html">
@@ -689,7 +623,7 @@
 					<li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-tag"></i>
-							<span class="menu-text"> More Pages </span>
+							<span class="menu-text">More </span>
 
 							<b class="arrow fa fa-angle-down"></b>
 						</a>
@@ -725,42 +659,6 @@
 							</li>
 
 							<li class="">
-								<a href="invoice.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Invoice
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="timeline.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Timeline
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="search.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Search Results
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="email.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Email Templates
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
 								<a href="login.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Login &amp; Register
@@ -771,7 +669,7 @@
 						</ul>
 					</li>
 
-					<li class="">
+					<!-- <li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-file-o"></i>
 
@@ -832,7 +730,7 @@
 								<b class="arrow"></b>
 							</li>
 						</ul>
-					</li>
+					</li> -->
 				</ul><!-- /.nav-list -->
 
 				<div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
@@ -935,9 +833,9 @@
 								<!-- PAGE CONTENT BEGINS -->
 
 								<div class="row">
-									<div class="space-6"></div>
+									<!-- <div class="space-6"></div> -->
 
-									<div class="col-sm-10 infobox-container">
+									<!-- <div class="col-sm-10 infobox-container">
 
 										<div class="infobox infobox-blue2 infobox-dark">
 											<div class="infobox-progress">
@@ -995,12 +893,12 @@
 											</div>
 										</div>
 
-									</div>
+									</div> -->
 								</div>
 
 									<div class="vspace-12-sm"></div>
                <div class="row">
-									<div class="col-sm-12">
+									<div class="col-sm-8">
 										<div class="widget-box">
 											<div class="widget-header widget-header-flat widget-header">
 												<h5 class="widget-title">
@@ -1102,9 +1000,9 @@
 																<button class="btn btn-success">
 																	<i class="ace-icon fa fa-signal"></i>
 																</button>
-																	&nbsp; Completed Projects
+																	&nbsp; Expected Revenue
 															</span>
-															<h4 class="bigger pull-right">100</h4>
+															<h4 class="bigger pull-right">Ksh.3M</h4>
 														</div>
 
 														<div class="grid3">
@@ -1112,9 +1010,9 @@
 																<button class="btn btn-primary">
 																	<i class="ace-icon fa fa-signal"></i>
 																</button>
-																&nbsp; Ongoing projects
+																&nbsp; Collected Revenue
 															</span>
-															<h4 class="bigger pull-right">941</h4>
+															<h4 class="bigger pull-right">Ksh.2M</h4>
 														</div>
 
 														<div class="grid3">
@@ -1122,15 +1020,76 @@
 																<button class="btn btn-danger">
 																	<i class="ace-icon fa fa-signal"></i>
 																</button>
-																&nbsp; Pending Projects
+																&nbsp; Pending Amount
 															</span>
-															<h4 class="bigger pull-right">50</h4>
+															<h4 class="bigger pull-right">Ksh.1M</h4>
 														</div>
 													</div>
 												</div><!-- /.widget-main -->
 											</div><!-- /.widget-body -->
 										</div><!-- /.widget-box -->
 									</div><!-- /.col -->
+
+									<div class="col-sm-4 infobox-container">
+
+										<div class="infobox infobox-blue2" style="height:100px; width:500px;">
+											<div class="infobox-progress">
+												<div class="easy-pie-chart percentage" data-percent="100" data-size="90">
+													<span class="percent">2.5B</span>
+												</div>
+											</div>
+
+
+											<div class="infobox-data" style="float:right;">
+												<span class="infobox-text">Target Collection</span>
+
+												<div class="infobox-content">
+													<span class="bigger-110">~</span>
+													2017/2018
+												</div>
+											</div>
+										</div>
+
+										<div class="infobox infobox-green" style="height:100px; width:500px;">
+											<div class="infobox-progress">
+												<div class="easy-pie-chart percentage" data-percent="30" data-size="90">
+													<span class="percent">20</span>M
+												</div>
+											</div>
+
+											<div class="infobox-data" style="float:right;">
+												<div class="infobox-content">Yearly Collection</div>
+												<div class="infobox-content">Year-to-date</div>
+											</div>
+										</div>
+
+										<div class="infobox infobox-red" style="height:100px; width:500px;">
+											<div class="infobox-progress">
+												<div class="easy-pie-chart percentage" data-percent="20" data-size="90">
+													<span class="percent">10</span>M
+												</div>
+											</div>
+
+											<div class="infobox-data" style="float:right;">
+												<div class="infobox-content">	Monthly Collection</div>
+												<div class="infobox-content">~ January 2018</div>
+											</div>
+										</div>
+
+										<div class="infobox infobox-purple " style="height:100px; width:500px; font-size:30%:">
+											<div class="infobox-progress">
+												<div class="easy-pie-chart percentage" data-percent="4" data-size="90">
+													<span class="percent">4</span>M
+												</div>
+											</div>
+
+											<div class="infobox-data" style="float:right;">
+												<div class="infobox-content">Daily Collection</div>
+												<div class="infobox-content">~Monday</div>
+											</div>
+										</div>
+
+									</div>
 								</div><!-- /.row -->
 
 								<div class="hr hr32 hr-dotted"></div>
@@ -1138,7 +1097,7 @@
 								<div class="hr hr32 hr-dotted"></div>
 
 								<div class="row">
-									<div class="col-sm-6">
+									<div class="col-sm-8">
 										<div class="widget-box transparent" id="recent-box">
 											<div class="widget-header">
 												<h4 class="widget-title lighter smaller">
@@ -1784,6 +1743,52 @@
 											</div><!-- /.widget-body -->
 										</div><!-- /.widget-box -->
 									</div><!-- /.col -->
+									<div class="col-sm-4">
+										<div class="profile-skills">
+											<h4 class="widget-title lighter smaller">
+												<i class="ace-icon fa fa-rss orange"></i>Projects Progress
+											</h4></br>
+											<div class="progress">
+												<div class="progress-bar" style="width:80%; height:200px;">
+
+													<span class="pull-left">Total Projects</span>
+													<span class="pull-right">1091</span>
+												</div>
+											</div>
+
+											<div class="progress">
+												<div class="progress-bar progress-bar-success" style="width:72%">
+													<span class="pull-left">Ongoing projects</span>
+
+													<span class="pull-right">941</span>
+												</div>
+											</div>
+
+											<div class="progress">
+												<div class="progress-bar progress-bar-purple" style="width:60%">
+													<span class="pull-left">Pending Projects</span>
+
+													<span class="pull-right">350</span>
+												</div>
+											</div>
+
+											<div class="progress">
+												<div class="progress-bar progress-bar-warning" style="width:50%">
+													<span class="pull-left">Complete Projects</span>
+
+													<span class="pull-right">150</span>
+												</div>
+											</div>
+
+											<div class="progress" style="height:30px;">
+												<div class="progress-bar progress-bar-danger" style="width:38%">
+													<span class="pull-left">Launched Projects</span>
+
+													<span class="pull-right">100</span>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div><!-- /.row -->
 
 								<!-- PAGE CONTENT ENDS -->
