--- a/projects.html
+++ b/projects.html
@@ -375,7 +375,7 @@
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-desktop"></i>
 							<span class="menu-text">
-								UI &amp; Elements
+								Revenue Summary
 							</span>
 
 							<b class="arrow fa fa-angle-down"></b>
@@ -384,7 +384,7 @@
 						<b class="arrow"></b>
 
 						<ul class="submenu">
-							<li class="">
+							<!-- <li class="">
 								<a href="#" class="dropdown-toggle">
 									<i class="menu-icon fa fa-caret-right"></i>
 
@@ -449,12 +449,12 @@
 										<b class="arrow"></b>
 									</li>
 								</ul>
-							</li>
+							</li> -->
 
 							<li class="">
-								<a href="typography.html">
+								<a href="utilities.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Typography
+									Utilities
 								</a>
 
 								<b class="arrow"></b>
@@ -463,7 +463,7 @@
 							<li class="">
 								<a href="elements.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Elements
+									Rents
 								</a>
 
 								<b class="arrow"></b>
@@ -472,7 +472,7 @@
 							<li class="">
 								<a href="buttons.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Buttons &amp; Icons
+									Parking Fee
 								</a>
 
 								<b class="arrow"></b>
@@ -481,7 +481,7 @@
 							<li class="">
 								<a href="content-slider.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Content Sliders
+									Tourism
 								</a>
 
 								<b class="arrow"></b>
@@ -490,7 +490,7 @@
 							<li class="">
 								<a href="treeview.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Treeview
+									Business Permits
 								</a>
 
 								<b class="arrow"></b>
@@ -499,7 +499,7 @@
 							<li class="">
 								<a href="jquery-ui.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									jQuery UI
+									Land Rates
 								</a>
 
 								<b class="arrow"></b>
@@ -508,68 +508,15 @@
 							<li class="">
 								<a href="nestable-list.html">
 									<i class="menu-icon fa fa-caret-right"></i>
-									Nestable Lists
+									Others
 								</a>
 
 								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="#" class="dropdown-toggle">
-									<i class="menu-icon fa fa-caret-right"></i>
-
-									Three Level Menu
-									<b class="arrow fa fa-angle-down"></b>
-								</a>
-
-								<b class="arrow"></b>
-
-								<ul class="submenu">
-									<li class="">
-										<a href="#">
-											<i class="menu-icon fa fa-leaf green"></i>
-											Item #1
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="#" class="dropdown-toggle">
-											<i class="menu-icon fa fa-pencil orange"></i>
-
-											4th level
-											<b class="arrow fa fa-angle-down"></b>
-										</a>
-
-										<b class="arrow"></b>
-
-										<ul class="submenu">
-											<li class="">
-												<a href="#">
-													<i class="menu-icon fa fa-plus purple"></i>
-													Add Product
-												</a>
-
-												<b class="arrow"></b>
-											</li>
-
-											<li class="">
-												<a href="#">
-													<i class="menu-icon fa fa-eye pink"></i>
-													View Products
-												</a>
-
-												<b class="arrow"></b>
-											</li>
-										</ul>
-									</li>
-								</ul>
 							</li>
 						</ul>
 					</li>
 
-					<li class="active open">
+					<!-- <li class="active open">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-list"></i>
 							<span class="menu-text"> Tables </span>
@@ -598,9 +545,9 @@
 								<b class="arrow"></b>
 							</li>
 						</ul>
-					</li>
+					</li> -->
 
-					<li class="">
+					<!-- <li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-pencil-square-o"></i>
 							<span class="menu-text"> Forms </span>
@@ -656,9 +603,9 @@
 								<b class="arrow"></b>
 							</li>
 						</ul>
-					</li>
+					</li> -->
 
-					<li class="">
+					<li class="active">
 						<a href="projects.html">
 							<i class="menu-icon fa fa-list-alt"></i>
 							<span class="menu-text"> Projects </span>
@@ -686,7 +633,7 @@
 					<li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-tag"></i>
-							<span class="menu-text"> More Pages </span>
+							<span class="menu-text"> More </span>
 
 							<b class="arrow fa fa-angle-down"></b>
 						</a>
@@ -722,42 +669,6 @@
 							</li>
 
 							<li class="">
-								<a href="invoice.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Invoice
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="timeline.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Timeline
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="search.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Search Results
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="email.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Email Templates
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
 								<a href="login.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Login &amp; Register
@@ -768,7 +679,7 @@
 						</ul>
 					</li>
 
-					<li class="">
+					<!-- <li class="">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-file-o"></i>
 
@@ -829,7 +740,7 @@
 								<b class="arrow"></b>
 							</li>
 						</ul>
-					</li>
+					</li> -->
 				</ul><!-- /.nav-list -->
 
 				<div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
@@ -1030,8 +941,8 @@
 													<td colspan="8">
 														<div class="table-detail">
 															<div class="row">
-																<div class="col-xs-12 col-sm-2">
-																	<div class="text-center">
+																 <div class="col-xs-12 col-sm-2">
+																	<!--<div class="text-center">
 																		<img height="150" class="thumbnail inline no-margin-bottom" alt="Domain Owner's Avatar" src="assets/images/avatars/profile-pic.jpg" />
 																		<br />
 																		<div class="width-80 label label-info label-xlg arrowed-in arrowed-in-right">
@@ -1043,7 +954,7 @@
 																				</a>
 																			</div>
 																		</div>
-																	</div>
+																	</div>-->
 																</div>
 
 																<div class="col-xs-12 col-sm-7">
@@ -1051,53 +962,38 @@
 
 																	<div class="profile-user-info profile-user-info-striped">
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Username </div>
+																			<div class="profile-info-name">Sirere Road(10km)</div>
 
 																			<div class="profile-info-value">
-																				<span>alexdoe</span>
+																				<span>Allocated Ksh.50M,5% complete.<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Location </div>
+																			<div class="profile-info-name">Rongai Road(30km) </div>
 
 																			<div class="profile-info-value">
-																				<i class="fa fa-map-marker light-orange bigger-110"></i>
-																				<span>Netherlands, Amsterdam</span>
+																				<i class=" light-orange bigger-110"></i>
+																				<span>Allocated Ksh.60M ,2% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Age </div>
+																			<div class="profile-info-name"> Sikwa Road(20km) </div>
 
 																			<div class="profile-info-value">
-																				<span>38</span>
+																				<span>Allocated 150M ,1% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Joined </div>
+																			<div class="profile-info-name"> Initial date </div>
 
 																			<div class="profile-info-value">
-																				<span>2010/06/20</span>
+																				<span>2017/05/20</span>
 																			</div>
 																		</div>
 
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Last Online </div>
-
-																			<div class="profile-info-value">
-																				<span>3 hours ago</span>
-																			</div>
-																		</div>
-
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> About Me </div>
-
-																			<div class="profile-info-value">
-																				<span>Bio</span>
-																			</div>
-																		</div>
 																	</div>
 																</div>
 
@@ -1213,17 +1109,6 @@
 															<div class="row">
 																<div class="col-xs-12 col-sm-2">
 																	<div class="text-center">
-																		<!-- <img height="150" class="thumbnail inline no-margin-bottom" alt="Domain Owner's Avatar" src="assets/images/avatars/profile-pic.jpg" />
-																		<br />
-																		<div class="width-80 label label-info label-xlg arrowed-in arrowed-in-right">
-																			<div class="inline position-relative">
-																				<a class="user-title-label" href="#">
-																					<i class="ace-icon fa fa-circle light-green"></i>
-																					&nbsp;
-																					<span class="white">Alex M. Doe</span>
-																				</a>
-																			</div>
-																		</div> -->
 																	</div>
 																</div>
 
@@ -1232,59 +1117,44 @@
 
 																	<div class="profile-user-info profile-user-info-striped">
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Username </div>
+																			<div class="profile-info-name">Sirere Road(10km)</div>
 
 																			<div class="profile-info-value">
-																				<span>alexdoe</span>
+																				<span>Allocated Ksh.50M,5% complete.<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Location </div>
+																			<div class="profile-info-name">Rongai Road(30km) </div>
 
 																			<div class="profile-info-value">
 																				<i class="fa fa-map-marker light-orange bigger-110"></i>
-																				<span>Netherlands, Amsterdam</span>
+																				<span>Allocated Ksh.60M ,2% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Age </div>
+																			<div class="profile-info-name"> Sikwa Road(20km) </div>
 
 																			<div class="profile-info-value">
-																				<span>38</span>
+																				<span>Allocated 150M ,1% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Joined </div>
+																			<div class="profile-info-name"> Initial date </div>
 
 																			<div class="profile-info-value">
-																				<span>2010/06/20</span>
+																				<span>2017/05/20</span>
 																			</div>
 																		</div>
 
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Last Online </div>
-
-																			<div class="profile-info-value">
-																				<span>3 hours ago</span>
-																			</div>
-																		</div>
-
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> About Me </div>
-
-																			<div class="profile-info-value">
-																				<span>Bio</span>
-																			</div>
-																		</div>
 																	</div>
 																</div>
 
 																<div class="col-xs-12 col-sm-3">
 																	<div class="space visible-xs"></div>
-																	<h4 class="header blue lighter less-margin">Send a feedback to Admin</h4>
+																	<h4 class="header blue lighter less-margin">Send a feedback on the projects</h4>
 
 																	<div class="space-6"></div>
 
