--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<a href="index.html" class="navbar-brand">
 						<small>
 							<!-- <i class="fa fa-leaf"></i> -->
-							<img src="assets/images/logo.png" style="height:30px; width:70px;">
+							<!-- <img src="assets/images/logo.png" style="height:30px; width:70px;"> -->
 							Revenue Sure
 						</small>
 					</a>
@@ -404,7 +404,7 @@
 							</li>
 
 							<li class="">
-								<a href="buttons.html">
+								<a href="parking.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Parking Fee
 								</a>
@@ -422,7 +422,7 @@
 							</li>
 
 							<li class="">
-								<a href="treeview.html">
+								<a href="business.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Business Permits
 								</a>
@@ -431,7 +431,7 @@
 							</li>
 
 							<li class="">
-								<a href="jquery-ui.html">
+								<a href="land.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Land Rates
 								</a>
@@ -440,7 +440,7 @@
 							</li>
 
 							<li class="">
-								<a href="nestable-list.html">
+								<a href="others.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Others
 								</a>
