--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 					<a href="index.html" class="navbar-brand">
 						<small>
 							<!-- <i class="fa fa-leaf"></i> -->
-              <img src="assets/images/logo.png" style="height:30px; width:70px;">
+              <!-- <img src="assets/images/logo.png" style="height:30px; width:70px;"> -->
 							 Revenue Sure
 						</small>
 					</a>
