--- a/tourism.html
+++ b/tourism.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta charset="utf-8" />
-		<title>Projects -Revenue Sure</title>
+		<title>Tourism -Revenue Sure</title>
 
 		<meta name="description" content="Static &amp; Dynamic Tables" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -34,7 +34,7 @@
 					<a href="index.html" class="navbar-brand">
 						<small>
 							<!-- <i class="fa fa-leaf"></i> -->
-              <img src="assets/images/logo.png" style="height:30px; width:70px;">
+              <!-- <img src="assets/images/logo.png" style="height:30px; width:70px;"> -->
 							 Revenue Sure
 						</small>
 					</a>
