--- a/calendar.html
+++ b/calendar.html
@@ -485,6 +485,15 @@
 						<b class="arrow"></b>
 					</li>
 
+					<li class="">
+						<a href="staff.html">
+							<i class="menu-icon fa fa-list-alt"></i>
+							<span class="menu-text"> Staff</span>
+						</a>
+
+						<b class="arrow"></b>
+					</li>
+
 					<li class="active">
 						<a href="calendar.html">
 							<i class="menu-icon fa fa-calendar"></i>
