--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<div class="navbar-buttons navbar-header pull-right" role="navigation">
 					<ul class="nav ace-nav">
-						<li class="grey dropdown-modal">
+						<li class="blue dropdown-modal">
 							<a data-toggle="dropdown" class="dropdown-toggle" href="#">
 								<i class="ace-icon fa fa-tasks"></i>
 								<span class="badge badge-grey">4</span>
@@ -119,7 +119,7 @@
 							</ul>
 						</li>
 
-						<li class="purple dropdown-modal">
+						<li class="light-blue dropdown-modal">
 							<a data-toggle="dropdown" class="dropdown-toggle" href="#">
 								<i class="ace-icon fa fa-bell icon-animated-bell"></i>
 								<span class="badge badge-important">8</span>
@@ -187,7 +187,7 @@
 							</ul>
 						</li>
 
-						<li class="green dropdown-modal">
+						<li class="blue dropdown-modal">
 							<a data-toggle="dropdown" class="dropdown-toggle" href="#">
 								<i class="ace-icon fa fa-envelope icon-animated-vertical"></i>
 								<span class="badge badge-success">5</span>
@@ -596,6 +596,15 @@
 						<a href="projects.html">
 							<i class="menu-icon fa fa-list-alt"></i>
 							<span class="menu-text">Projects</span>
+						</a>
+
+						<b class="arrow"></b>
+					</li>
+
+					<li class="">
+						<a href="revenue.html">
+							<i class="menu-icon fa fa-list-alt"></i>
+							<span class="menu-text">Staff</span>
 						</a>
 
 						<b class="arrow"></b>
@@ -1874,7 +1883,7 @@
 						trackColor: trackColor,
 						scaleColor: false,
 						lineCap: 'butt',
-						lineWidth: parseInt(size/10),
+						lineWidth: parseInt(size/5),
 						animate: ace.vars['old_ie'] ? false : 1000,
 						size: size
 					});
@@ -1919,7 +1928,7 @@
 								color: '#fff',
 								width: 2
 							},
-							startAngle: 2
+							startAngle: 4
 						}
 					},
 					legend: {
