--- a/rents.html
+++ b/rents.html
@@ -460,6 +460,15 @@
 					</li>
 
 					<li class="">
+						<a href="staff.html">
+							<i class="menu-icon fa fa-list-alt"></i>
+							<span class="menu-text"> Staff</span>
+						</a>
+
+						<b class="arrow"></b>
+					</li>
+
+					<li class="">
 						<a href="calendar.html">
 							<i class="menu-icon fa fa-calendar"></i>
 
