--- a/projects.html
+++ b/projects.html
@@ -348,19 +348,6 @@
 					try{ace.settings.loadState('sidebar')}catch(e){}
 				</script>
 
-				<div class="sidebar-shortcuts" id="sidebar-shortcuts">
-
-					<div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
-						<span class="btn btn-success"></span>
-
-						<span class="btn btn-info"></span>
-
-						<span class="btn btn-warning"></span>
-
-						<span class="btn btn-danger"></span>
-					</div>
-				</div><!-- /.sidebar-shortcuts -->
-
 				<ul class="nav nav-list">
 					<li class="">
 						<a href="index.html">
@@ -384,72 +371,6 @@
 						<b class="arrow"></b>
 
 						<ul class="submenu">
-							<!-- <li class="">
-								<a href="#" class="dropdown-toggle">
-									<i class="menu-icon fa fa-caret-right"></i>
-
-									Layouts
-									<b class="arrow fa fa-angle-down"></b>
-								</a>
-
-								<b class="arrow"></b>
-
-								<ul class="submenu">
-									<li class="">
-										<a href="top-menu.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Top Menu
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="two-menu-1.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Two Menus 1
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="two-menu-2.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Two Menus 2
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="mobile-menu-1.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Default Mobile Menu
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="mobile-menu-2.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Mobile Menu 2
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="mobile-menu-3.html">
-											<i class="menu-icon fa fa-caret-right"></i>
-											Mobile Menu 3
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-								</ul>
-							</li> -->
 
 							<li class="">
 								<a href="utilities.html">
@@ -461,7 +382,7 @@
 							</li>
 
 							<li class="">
-								<a href="elements.html">
+								<a href="rent.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Rents
 								</a>
@@ -470,7 +391,7 @@
 							</li>
 
 							<li class="">
-								<a href="buttons.html">
+								<a href="parking.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Parking Fee
 								</a>
@@ -479,7 +400,7 @@
 							</li>
 
 							<li class="">
-								<a href="content-slider.html">
+								<a href="tourism.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Tourism
 								</a>
@@ -488,7 +409,7 @@
 							</li>
 
 							<li class="">
-								<a href="treeview.html">
+								<a href="business.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Business Permits
 								</a>
@@ -497,7 +418,7 @@
 							</li>
 
 							<li class="">
-								<a href="jquery-ui.html">
+								<a href="land.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Land Rates
 								</a>
@@ -506,7 +427,7 @@
 							</li>
 
 							<li class="">
-								<a href="nestable-list.html">
+								<a href="other.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Others
 								</a>
@@ -520,15 +441,6 @@
 						<a href="projects.html">
 							<i class="menu-icon fa fa-list-alt"></i>
 							<span class="menu-text"> Projects </span>
-						</a>
-
-						<b class="arrow"></b>
-					</li>
-
-					<li class="">
-						<a href="staff.html">
-							<i class="menu-icon fa fa-list-alt"></i>
-							<span class="menu-text"> Staff</span>
 						</a>
 
 						<b class="arrow"></b>
@@ -574,15 +486,6 @@
 								<a href="inbox.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Inbox
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="pricing.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Pricing Tables
 								</a>
 
 								<b class="arrow"></b>
