--- a/revenue.html
+++ b/revenue.html
@@ -253,7 +253,7 @@ An hour ago
 </li>
 
 <li>
-<a href="staff.html"> <i class="material-icons">view_stream</i> <span class="title">Staff</span> <span class=" badge badge-disable pull-right ">203</span>
+<a href=".html"> <i class="material-icons">view_stream</i> <span class="title"></span> <span class=" badge badge-disable pull-right ">203</span>
 </a>
 </li>
 
