--- a/index.html
+++ b/index.html
@@ -343,23 +343,10 @@
 				try{ace.settings.loadState('main-container')}catch(e){}
 			</script>
 
-			<div id="sidebar" class="sidebar                  responsive                    ace-save-state">
+			<div id="sidebar" class="sidebar responsive ace-save-state">
 				<script type="text/javascript">
 					try{ace.settings.loadState('sidebar')}catch(e){}
 				</script>
-
-				<div class="sidebar-shortcuts" id="sidebar-shortcuts">
-
-					<div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
-						<span class="btn btn-success"></span>
-
-						<span class="btn btn-info"></span>
-
-						<span class="btn btn-warning"></span>
-
-						<span class="btn btn-danger"></span>
-					</div>
-				</div><!-- /.sidebar-shortcuts -->
 
 				<ul class="nav nav-list">
 					<li class="active">
@@ -447,164 +434,13 @@
 
 								<b class="arrow"></b>
 							</li>
-
-							<!-- <li class="">
-								<a href="#" class="dropdown-toggle">
-									<i class="menu-icon fa fa-caret-right"></i>
-
-									Three Level Menu
-									<b class="arrow fa fa-angle-down"></b>
-								</a>
-
-								<b class="arrow"></b>
-
-								<ul class="submenu">
-									<li class="">
-										<a href="#">
-											<i class="menu-icon fa fa-leaf green"></i>
-											Item #1
-										</a>
-
-										<b class="arrow"></b>
-									</li>
-
-									<li class="">
-										<a href="#" class="dropdown-toggle">
-											<i class="menu-icon fa fa-pencil orange"></i>
-
-											4th level
-											<b class="arrow fa fa-angle-down"></b>
-										</a>
-
-										<b class="arrow"></b>
-
-										<ul class="submenu">
-											<li class="">
-												<a href="#">
-													<i class="menu-icon fa fa-plus purple"></i>
-													Add Product
-												</a>
-
-												<b class="arrow"></b>
-											</li>
-
-											<li class="">
-												<a href="#">
-													<i class="menu-icon fa fa-eye pink"></i>
-													View Products
-												</a>
-
-												<b class="arrow"></b>
-											</li>
-										</ul>
-									</li>
-								</ul>
-							</li> -->
 						</ul>
 					</li>
-
-					<!-- <li class="">
-						<a href="#" class="dropdown-toggle">
-							<i class="menu-icon fa fa-list"></i>
-							<span class="menu-text"> Tables </span>
-
-							<b class="arrow fa fa-angle-down"></b>
-						</a>
-
-						<b class="arrow"></b>
-
-						<ul class="submenu">
-							<li class="">
-								<a href="tables.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Simple &amp; Dynamic
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="jqgrid.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									jqGrid plugin
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-						</ul>
-					</li> -->
-
-					<!-- <li class="">
-						<a href="#" class="dropdown-toggle">
-							<i class="menu-icon fa fa-pencil-square-o"></i>
-							<span class="menu-text"> Forms </span>
-
-							<b class="arrow fa fa-angle-down"></b>
-						</a>
-
-						<b class="arrow"></b>
-
-						<ul class="submenu">
-							<li class="">
-								<a href="form-elements.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Form Elements
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="form-elements-2.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Form Elements 2
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="form-wizard.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Wizard &amp; Validation
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="wysiwyg.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Wysiwyg &amp; Markdown
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="dropzone.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Dropzone File Upload
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-						</ul>
-					</li> -->
 
 					<li class="">
 						<a href="projects.html">
 							<i class="menu-icon fa fa-list-alt"></i>
 							<span class="menu-text">Projects</span>
-						</a>
-
-						<b class="arrow"></b>
-					</li>
-
-					<li class="">
-						<a href="revenue.html">
-							<i class="menu-icon fa fa-list-alt"></i>
-							<span class="menu-text">Staff</span>
 						</a>
 
 						<b class="arrow"></b>
@@ -659,15 +495,6 @@
 							</li>
 
 							<li class="">
-								<a href="pricing.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Pricing Tables
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
 								<a href="login.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Login &amp; Register
@@ -677,69 +504,6 @@
 							</li>
 						</ul>
 					</li>
-
-					<!-- <li class="">
-						<a href="#" class="dropdown-toggle">
-							<i class="menu-icon fa fa-file-o"></i>
-
-							<span class="menu-text">
-								Other Pages
-
-								<span class="badge badge-primary">5</span>
-							</span>
-
-							<b class="arrow fa fa-angle-down"></b>
-						</a>
-
-						<b class="arrow"></b>
-
-						<ul class="submenu">
-							<li class="">
-								<a href="faq.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									FAQ
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="error-404.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Error 404
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="error-500.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Error 500
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="grid.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Grid
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="blank.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									Blank Page
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-						</ul>
-					</li> -->
 				</ul><!-- /.nav-list -->
 
 				<div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
@@ -842,67 +606,6 @@
 								<!-- PAGE CONTENT BEGINS -->
 
 								<div class="row">
-									<!-- <div class="space-6"></div> -->
-
-									<!-- <div class="col-sm-10 infobox-container">
-
-										<div class="infobox infobox-blue2 infobox-dark">
-											<div class="infobox-progress">
-												<div class="easy-pie-chart percentage" data-percent="100" data-size="46">
-													<span class="percent">90M</span>
-												</div>
-											</div>
-
-											<div class="infobox-data">
-												<span class="infobox-text">Target Collection</span>
-
-												<div class="infobox-content">
-													<span class="bigger-110">~</span>
-													2017/2018
-												</div>
-											</div>
-										</div>
-
-										<div class="infobox infobox-green infobox-dark">
-											<div class="infobox-progress">
-												<div class="easy-pie-chart percentage" data-percent="30" data-size="46">
-													<span class="percent">20</span>M
-												</div>
-											</div>
-
-											<div class="infobox-data">
-												<div class="infobox-content">Yearly Collection</div>
-												<div class="infobox-content">Year-to-date</div>
-											</div>
-										</div>
-
-										<div class="infobox infobox-red infobox-dark">
-											<div class="infobox-progress">
-												<div class="easy-pie-chart percentage" data-percent="20" data-size="46">
-													<span class="percent">10</span>M
-												</div>
-											</div>
-
-											<div class="infobox-data">
-												<div class="infobox-content">	Monthly Collection</div>
-												<div class="infobox-content">~ January 2018</div>
-											</div>
-										</div>
-
-										<div class="infobox infobox-purple infobox-dark">
-											<div class="infobox-progress">
-												<div class="easy-pie-chart percentage" data-percent="4" data-size="46">
-													<span class="percent">2</span>M
-												</div>
-											</div>
-
-											<div class="infobox-data">
-												<div class="infobox-content">Daily Collection</div>
-												<div class="infobox-content">~Monday</div>
-											</div>
-										</div>
-
-									</div> -->
 								</div>
 
 									<div class="vspace-12-sm"></div>
@@ -2076,13 +1779,15 @@
 					if(this.checked) $(this).closest('li').addClass('selected');
 					else $(this).closest('li').removeClass('selected');
 				});
+				$('#tasks').disableSelection();
+				$('#tasks input:checkbox').removeAttr('checked').on('click', function(){})
 
 
 				//show the dropdowns on top or bottom depending on window height and menu position
 				$('#task-tab .dropdown-hover').on('mouseenter', function(e) {
 					var offset = $(this).offset();
 
-					var $w = $(window)
+					var $w = $(window);
 					if (offset.top > $w.scrollTop() + $w.innerHeight() - 100)
 						$(this).addClass('dropup');
 					else $(this).removeClass('dropup');
