--- a/calendar.html
+++ b/calendar.html
@@ -408,7 +408,7 @@
 							</li>
 
 							<li class="">
-								<a href="elements.html">
+								<a href="rents.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Rents
 								</a>
@@ -417,7 +417,7 @@
 							</li>
 
 							<li class="">
-								<a href="buttons.html">
+								<a href="parking.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Parking Fee
 								</a>
@@ -426,7 +426,7 @@
 							</li>
 
 							<li class="">
-								<a href="content-slider.html">
+								<a href="tourism.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Tourism
 								</a>
@@ -435,7 +435,7 @@
 							</li>
 
 							<li class="">
-								<a href="treeview.html">
+								<a href="business.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Business Permits
 								</a>
@@ -444,7 +444,7 @@
 							</li>
 
 							<li class="">
-								<a href="jquery-ui.html">
+								<a href="land.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Land Rates
 								</a>
@@ -453,7 +453,7 @@
 							</li>
 
 							<li class="">
-								<a href="nestable-list.html">
+								<a href="others.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Others
 								</a>
