--- a/login.html
+++ b/login.html
@@ -97,11 +97,11 @@
 												</fieldset>
 											</form>
 
-											<div class="social-or-login center">
+											<!-- <div class="social-or-login center">
 												<span class="bigger-110">Or Login Using</span>
-											</div>
+											</div> -->
 
-											<div class="space-6"></div>
+											<!-- <div class="space-6"></div>
 
 											<div class="social-login center">
 												<a class="btn btn-primary">
@@ -115,7 +115,7 @@
 												<a class="btn btn-danger">
 													<i class="ace-icon fa fa-google-plus"></i>
 												</a>
-											</div>
+											</div> -->
 										</div><!-- /.widget-main -->
 
 										<div class="toolbar clearfix">
@@ -257,7 +257,7 @@
 							<div class="navbar-fixed-top align-right">
 								<br />
 								&nbsp;
-								<a id="btn-login-dark" href="#">Dark</a>
+								<a id="btn-login-light" href="#">Light</a>
 								&nbsp;
 								<span class="blue">/</span>
 								&nbsp;
@@ -265,9 +265,11 @@
 								&nbsp;
 								<span class="blue">/</span>
 								&nbsp;
-								<a id="btn-login-light" href="#">Light</a>
+								<a id="btn-login-dark" href="#">Dark</a>
 								&nbsp; &nbsp; &nbsp;
 							</div>
+
+
 						</div>
 					</div><!-- /.col -->
 				</div><!-- /.row -->
