--- a/utilities.html
+++ b/utilities.html
@@ -347,7 +347,7 @@
 				<script type="text/javascript">
 					try{ace.settings.loadState('sidebar')}catch(e){}
 				</script>
-				
+
 				<ul class="nav nav-list">
 					<li class="">
 						<a href="index.html">
@@ -391,7 +391,7 @@
 							</li>
 
 							<li class="">
-								<a href="buttons.html">
+								<a href="parking.html">
 									<i class="menu-icon fa fa-caret-right"></i>
 									Parking Fee
 								</a>
